--- a/index.html
+++ b/index.html
@@ -1,4 +1,55 @@
-<table border="1" cellspacing="0" cellpadding="8">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Mi Página Personal - Roberto Febrillet</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background: #f8f9fa;
+    }
+    h1, h2 {
+      color: #1e293b;
+    }
+    p {
+      text-align: justify;
+      line-height: 1.6;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 20px;
+    }
+    th, td {
+      border: 1px solid #999;
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background: #e2e8f0;
+    }
+    tr:nth-child(even) {
+      background: #f1f5f9;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Mi biografía</h1>
+  <p>
+    Mi nombre es <strong>Roberto Febrillet</strong>, matrícula <strong>100164846</strong>.
+    Soy estudiante de la <strong>Universidad Autónoma de Santo Domingo (UASD)</strong>.
+    Inicié en la década anterior mis estudios superiores en Ciencias Informáticas, 
+    pero no logré completar la carrera debido a que trabajaba bajo mucha presión 
+    y tenía poco tiempo para dedicarle a las asignaturas. 
+    Lo principal fue la inmadurez, lo cual no me permitió culminar en ese momento.
+  </p>
+
+  <h2>Mi horario universitario es el siguiente</h2>
+  <p>De lunes a viernes de <strong>8:00 a.m. a 10:00 p.m.</strong></p>
+
+ <table border="1" cellspacing="0" cellpadding="8">
   <thead>
     <tr>
       <th>Hora</th>
@@ -25,8 +76,8 @@
       <td>Matemáticas</td>
       <td></td>
       <td></td>
-      <td>Ética Profesional</td>
+      <td>Sistema Operativo</td>
     </tr>
-    <!-- Aquí puedes seguir hasta las 22:00 (10pm) -->
+    <!-- hasta las 22:00 (10pm) -->
   </tbody>
 </table>
